InsuranceOrg/force-app/main/default/objects/vlocity_ins__VlocityStateTransition__c/vlocity_ins__VlocityStateTransition__c.object-meta.xml
<CustomObject>
    <description>A state transition allowed within a given version of a Vlocity State Model. Master-detail child object of Vlocity State Model Version.</description>
    <label>Vlocity State Transition</label>
    <nameField>
        <label>Vlocity State Transition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity State Transitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>