InsuranceOrg/force-app/main/default/objects/vlocity_ins__VlocityStateTransition__c/fields/vlocity_ins__Alternate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Alternate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternate</label>
    <referenceTo>vlocity_ins__VlocityState__c</referenceTo>
    <relationshipLabel>Vlocity State Transition (Alternate)</relationshipLabel>
    <relationshipName>StateTransitionAlternateStates</relationshipName>
    <type>Lookup</type>
</CustomField>