InsuranceOrg/force-app/main/default/objects/vlocity_ins__VlocityStateTransition__c/fields/vlocity_ins__IsDefaultTransition__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsDefaultTransition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is the checkbox to indicate if the ToState is the default transition from the FromState</description>
    <label>Default Transition</label>
    <type>Checkbox</type>
</CustomField>