InsuranceOrg/force-app/main/default/objects/vlocity_ins__VlocityStateTransition__c/fields/vlocity_ins__To__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To</label>
    <referenceTo>vlocity_ins__VlocityState__c</referenceTo>
    <relationshipLabel>Vlocity State Transition (To)</relationshipLabel>
    <relationshipName>ToState</relationshipName>
    <type>Lookup</type>
</CustomField>