InsuranceOrg/force-app/main/default/objects/vlocity_ins__VlocityStateTransition__c/fields/vlocity_ins__TransitionCompletionCriteria__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TransitionCompletionCriteria__c</fullName>
    <description>This field is to determine when the state transition happens. For example, when the mode is set to AllTrue, the transition is effected only when all rules defined for the transition pass.</description>
    <label>State Transition Completion Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AllTrue</fullName>
                <label>All True</label>
            </value>
            <value>
                <fullName>AnyTrue</fullName>
                <default>true</default>
                <label>Any True</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>